# mwbot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: poetry_build_publish.yml  release.yml
docs/: CNAME  _navbar.md  _sidebar.md  homepage.md  index.html  index.md  style.css
docs/api/: arktool.md  bot.md  homepage.md  index.md  prototype.md  utils.md
docs/fornew/: guide.md  quickstart.md  usage.md
examples/templates/: prts_trap.wikitext
mwbot/: __init__.py  arktool.py  arktool_internet.py  bot.py  error.py  model.py  prototype.py  utils.py
tests/: __init__.py  arktool.py  bot.py  test.py  testfile.py
