[project]
name = "mwbot"
version = "1.0.18"
description = "个性化封装的Python Mediawiki API库"
authors = [
    {name = "咕咕mur",email = "2221533105@qq.com"},
]
dependencies = [
    "httpx>=0.23.3",
    "ujson>=5.7.0",
    "loguru>=0.6.0",
    "mwparserfromhell>=0.6.4",
    "regex>=2022.10.31",
    "pendulum>=2.1.2",
    "asyncio>=3.4.3",
    "xmltodict>=0.13.0",
    "Jinja2>=3.1.2",
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = {text = "MIT"}
keywords = ["Mediawiki","API","bot","auto"]

[tool.pdm]
[tool.pdm.build]
includes = ["mwbot"]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[package.source]
type = "git"
url = "ssh://git@github.com/GuGuMur/mwbot.git"

[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["E402", "E501", ""C901", "PT023"]

line-length = 120
target-version = "py310"

[tool.black]
line-length = 120
preview = true
target-version = ["py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
length_sort = true
force_sort_within_sections = true
src_paths = ["nonebot_plugin_skland_arksign", "tests"]
extra_standard_library = ["typing_extensions"]
