[project]
name = "mwbot"
version = "1.0.27"
description = "个性化封装的Python Mediawiki API库"
authors = [
    {name = "咕咕mur",email = "2221533105@qq.com"},
]
dependencies = [
    "httpx>=0.23.3",
    "ujson>=5.7.0",
    "loguru>=0.6.0",
    "mwparserfromhell>=0.6.4",
    "regex>=2022.10.31",
    "xmltodict>=0.13.0",
    "Jinja2>=3.1.2",
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = {text = "MIT"}
keywords = ["Mediawiki","API","bot","auto"]

[tool.pdm]
[tool.pdm.build]
includes = ["mwbot"]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[package.source]
type = "git"
url = "ssh://git@github.com/GuGuMur/mwbot.git"