[project]
name = "mwbot"
version = "1.0.35"
description = "个性化封装的Python Mediawiki API库"
authors = [
    {name = "咕咕mur",email = "2221533105@qq.com"},
]
dependencies = [
    "httpx>=0.26.0",
    "ujson>=5.9.0",
    "loguru>=0.7.2",
    "mwparserfromhell>=0.6.6",
    "regex>=2023.12.25",
    "xmltodict>=0.13.0",
    "Jinja2>=3.1.3",
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = {text = "MIT"}
keywords = ["Mediawiki","API","bot","auto"]

[tool.pdm]
[tool.pdm.build]
includes = ["mwbot"]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[package.source]
type = "git"
url = "ssh://git@github.com/GuGuMur/mwbot.git"